hal/include/HAL/Semaphore.hpp

typedef pthread_mutex_t* MUTEX_ID;
typedef sem_t* SEMAPHORE_ID;
typedef pthread_cond_t* MULTIWAIT_ID;
	extern const uint32_t SEMAPHORE_Q_FIFO;
	extern const uint32_t SEMAPHORE_DELETE_SAFE;
	extern const uint32_t SEMAPHORE_INVERSION_SAFE;
	extern const int32_t SEMAPHORE_NO_WAIT;
	extern const uint32_t SEMAPHORE_EMPTY;
	extern const uint32_t SEMAPHORE_FULL;