wpilibj/wpilibJavaDevices/src/main/java/edu/wpi/first/wpilibj/hal/HALLibrary.java

	/**
	 * Original signature : <code>STATUS setTaskPriority(TASK, int)</code><br>
	 * <i>native declaration : AthenaJava\target\native\include\HAL\Task.h:436</i><br>
	 * @deprecated use the safer methods {@link #setTaskPriority(edu.wpi.first.wpilibj.hal.HALLibrary.TASK, int)} and {@link #setTaskPriority(com.sun.jna.Pointer, int)} instead
	 */
	//@Deprecated
	//public static native int setTaskPriority(Pointer task, int priority);
	/**
	 * Original signature : <code>STATUS setTaskPriority(TASK, int)</code><br>
	 * <i>native declaration : AthenaJava\target\native\include\HAL\Task.h:436</i>
	 */
	//public static native int setTaskPriority(HALLibrary.TASK task, int priority);
	/**
	 * Original signature : <code>STATUS getTaskPriority(TASK, int*)</code><br>
	 * <i>native declaration : AthenaJava\target\native\include\HAL\Task.h:438</i><br>
	 * @deprecated use the safer methods {@link #getTaskPriority(edu.wpi.first.wpilibj.hal.HALLibrary.TASK, java.nio.IntBuffer)} and {@link #getTaskPriority(com.sun.jna.Pointer, com.sun.jna.ptr.IntByReference)} instead
	 */
	//@Deprecated
	//public static native int getTaskPriority(Pointer task, IntByReference priority);
	/**
	 * Original signature : <code>STATUS getTaskPriority(TASK, int*)</code><br>
	 * <i>native declaration : AthenaJava\target\native\include\HAL\Task.h:438</i>
	 */
	//public static native int getTaskPriority(HALLibrary.TASK task, IntBuffer priority);
	/**
	 * Original signature : <code>void* getPort(uint8_t)</code><br>
	 * <i>native declaration : AthenaJava\target\native\include\HAL\HAL.h:446</i>
	 */
	//public static native Pointer getPort(byte pin);
	/**
	 * Original signature : <code>uint16_t getFPGAVersion(int32_t*)</code><br>
	 * <i>native declaration : AthenaJava\target\native\include\HAL\HAL.h:452</i><br>
	 * @deprecated use the safer methods {@link #getFPGAVersion(java.nio.IntBuffer)} and {@link #getFPGAVersion(com.sun.jna.ptr.IntByReference)} instead
	 */
	//@Deprecated
	//public static native short getFPGAVersion(IntByReference status);
	/**
	 * Original signature : <code>uint16_t getFPGAVersion(int32_t*)</code><br>
	 * <i>native declaration : AthenaJava\target\native\include\HAL\HAL.h:452</i>
	 */
	//public static native short getFPGAVersion(IntBuffer status);
	/**
	 * Original signature : <code>uint32_t getFPGARevision(int32_t*)</code><br>
	 * <i>native declaration : AthenaJava\target\native\include\HAL\HAL.h:454</i><br>
	 * @deprecated use the safer methods {@link #getFPGARevision(java.nio.IntBuffer)} and {@link #getFPGARevision(com.sun.jna.ptr.IntByReference)} instead
	 */
	//@Deprecated
	//public static native int getFPGARevision(IntByReference status);
	/**
	 * Original signature : <code>uint32_t getFPGARevision(int32_t*)</code><br>
	 * <i>native declaration : AthenaJava\target\native\include\HAL\HAL.h:454</i>
	 */
	//public static native int getFPGARevision(IntBuffer status);
	/**
	 * Original signature : <code>uint32_t getFPGATime(int32_t*)</code><br>
	 * <i>native declaration : AthenaJava\target\native\include\HAL\HAL.h:456</i><br>
	 * @deprecated use the safer methods {@link #getFPGATime(java.nio.IntBuffer)} and {@link #getFPGATime(com.sun.jna.ptr.IntByReference)} instead
	 */
	//@Deprecated
	//public static native int getFPGATime(IntByReference status);
	/**
	 * Original signature : <code>uint32_t getFPGATime(int32_t*)</code><br>
	 * <i>native declaration : AthenaJava\target\native\include\HAL\HAL.h:456</i>
	 */
	//public static native int getFPGATime(IntBuffer status);
	/**
	 * Original signature : <code>double testDouble(double)</code><br>
	 * <i>native declaration : AthenaJava\target\native\include\HAL\HAL.h:462</i>
	 */
	public static native double testDouble(double param);
	/**
	 * Original signature : <code>int32_t testInt32(int32_t)</code><br>
	 * <i>native declaration : AthenaJava\target\native\include\HAL\HAL.h:464</i>
	 */
	public static native int testInt32(int param);
	/**
	 * Original signature : <code>void NumericArrayResize()</code><br>
	 * <i>native declaration : AthenaJava\target\native\include\HAL\HAL.h:470</i>
	 */
	public static native void NumericArrayResize();
	/**
	 * Original signature : <code>void RTSetCleanupProc()</code><br>
	 * <i>native declaration : AthenaJava\target\native\include\HAL\HAL.h:472</i>
	 */
	public static native void RTSetCleanupProc();
	/**
	 * Original signature : <code>void EDVR_CreateReference()</code><br>
	 * <i>native declaration : AthenaJava\target\native\include\HAL\HAL.h:474</i>
	 */
	public static native void EDVR_CreateReference();
	/**
	 * Original signature : <code>void Occur()</code><br>
	 * <i>native declaration : AthenaJava\target\native\include\HAL\HAL.h:476</i>
	 */
	public static native void Occur();
	/*
	public static final GlobalDouble kDefaultWatchdogExpiration = new GlobalDouble(HALLibrary.JNA_NATIVE_LIB, "kDefaultWatchdogExpiration");
	public static final GlobalInt HAL_NO_WAIT = new GlobalInt(HALLibrary.JNA_NATIVE_LIB, "HAL_NO_WAIT");
	public static final GlobalInt HAL_WAIT_FOREVER = new GlobalInt(HALLibrary.JNA_NATIVE_LIB, "HAL_WAIT_FOREVER");
	public static final GlobalInt SEMAPHORE_Q_FIFO = new GlobalInt(HALLibrary.JNA_NATIVE_LIB, "SEMAPHORE_Q_FIFO");
	*/
	/*
	public static final GlobalInt SEMAPHORE_DELETE_SAFE = new GlobalInt(HALLibrary.JNA_NATIVE_LIB, "SEMAPHORE_DELETE_SAFE");
	public static final GlobalInt SEMAPHORE_INVERSION_SAFE = new GlobalInt(HALLibrary.JNA_NATIVE_LIB, "SEMAPHORE_INVERSION_SAFE");
	public static final GlobalInt SEMAPHORE_NO_WAIT = new GlobalInt(HALLibrary.JNA_NATIVE_LIB, "SEMAPHORE_NO_WAIT");
	*/
	/*
	public static final GlobalInt SEMAPHORE_EMPTY = new GlobalInt(HALLibrary.JNA_NATIVE_LIB, "SEMAPHORE_EMPTY");
	public static final GlobalInt SEMAPHORE_FULL = new GlobalInt(HALLibrary.JNA_NATIVE_LIB, "SEMAPHORE_FULL");
	public static final GlobalInt VXWORKS_FP_TASK = new GlobalInt(HALLibrary.JNA_NATIVE_LIB, "VXWORKS_FP_TASK");
	public static final GlobalInt HAL_objLib_OBJ_ID_ERROR = new GlobalInt(HALLibrary.JNA_NATIVE_LIB, "HAL_objLib_OBJ_ID_ERROR");
	public static final GlobalInt HAL_objLib_OBJ_DELETED = new GlobalInt(HALLibrary.JNA_NATIVE_LIB, "HAL_objLib_OBJ_DELETED");
	public static final GlobalInt HAL_taskLib_ILLEGAL_OPTIONS = new GlobalInt(HALLibrary.JNA_NATIVE_LIB, "HAL_taskLib_ILLEGAL_OPTIONS");
	public static final GlobalInt HAL_memLib_NOT_ENOUGH_MEMORY = new GlobalInt(HALLibrary.JNA_NATIVE_LIB, "HAL_memLib_NOT_ENOUGH_MEMORY");
	public static final GlobalInt HAL_taskLib_ILLEGAL_PRIORITY = new GlobalInt(HALLibrary.JNA_NATIVE_LIB, "HAL_taskLib_ILLEGAL_PRIORITY");
	public static final GlobalInt dio_kNumSystems = new GlobalInt(HALLibrary.JNA_NATIVE_LIB, "dio_kNumSystems");
	public static final GlobalInt solenoid_kNumDO7_0Elements = new GlobalInt(HALLibrary.JNA_NATIVE_LIB, "solenoid_kNumDO7_0Elements");
	public static final GlobalInt interrupt_kNumSystems = new GlobalInt(HALLibrary.JNA_NATIVE_LIB, "interrupt_kNumSystems");
	public static final GlobalInt kSystemClockTicksPerMicrosecond = new GlobalInt(HALLibrary.JNA_NATIVE_LIB, "kSystemClockTicksPerMicrosecond");
	*/
	/*
	public static class TASK extends PointerType {
		public TASK(Pointer address) {
			super(address);
		}
		public TASK() {
			super();
		}
	};
	public static class MUTEX_ID extends PointerType {
		public MUTEX_ID(Pointer address) {
			super(address);
		}
		public MUTEX_ID() {
			super();
		}
	};
	public static class MULTIWAIT_ID extends PointerType {
		public MULTIWAIT_ID(Pointer address) {
			super(address);
		}
		public MULTIWAIT_ID() {
			super();
		}
	};
	public static class SEMAPHORE_ID extends PointerType {
		public SEMAPHORE_ID(Pointer address) {
			super(address);
		}
		public SEMAPHORE_ID() {
			super();
		}
	};
	*/
}
